Fixed likedin logo, added ternary for footer on mobile/desktop

--- a/src/screens/template-elements/assets/css/main.css
+++ b/src/screens/template-elements/assets/css/main.css
@@ -2652,6 +2652,13 @@ input, select, textarea {
 		}
 
 /* Footer */
+    
+	/*  For Desktop Only  */
+	/* @media (min-width: 1200px) {
+		#footer .icon {
+			max-height: 25px;
+		} 
+	} */
 
 	#footer .icons {
 		margin: 1em 0 0 0;
